added 30 x 30 x 30 a example and updated scripts that still dont work

--- a/example/swap.conf
+++ b/example/swap.conf
@@ -17,17 +17,17 @@
 #########################
 # enable, step
 #########################
-
-Restart false
+MultiSimFolderName swap
+Restart true
 ####################################
 # kind {RESTART, RANDOM, INTSEED}
 ####################################
 PRNG     	INTSEED
-Random_Seed	5000 6000
+Random_Seed	5000	5000
 
 PRNG_ParallelTempering INTSEED
-ParallelTempering_Seed 50 50
-ParallelTemperingFreq   false    1
+ParallelTempering_Seed 50
+ParallelTemperingFreq   true    1
 ####################################
 # FORCE FIELD
 ####################################
@@ -38,14 +38,14 @@ Parameters     	 ./par_NobleGases_Mie.par
 # INPUT PDB FILES
 ####################################
 #Coordinates 0   setup_box_0.pdb
-#Coordinates 0   AR_BOX_0_restart.pdb
-Coordinates 0    START_BOX_0.pdb
+Coordinates 0   AR_BOX_0_restart.pdb
+#Coordinates 0    START_BOX_0.pdb
 
 ####################################
 # INPUT PSF FILES
 ####################################
-#Structure 0  	AR_merged.psf
-Structure 0 START_BOX_0.psf
+Structure 0  	AR_merged.psf
+#Structure 0 START_BOX_0.psf
 
 ############################################################################
 #  =======--------------------- SYSTEM --------------------------===========
@@ -81,15 +81,15 @@ PressureCalc  false
 # STEPS 
 ################################
 RunSteps           50
-EqSteps		   20    
+EqSteps		   20      
 AdjSteps	   10       
 
 ################################
 # MOVE FREQUENCY              
 ################################
-DisFreq               0.80  
+DisFreq               0.00  
 RotFreq		      0.00   
-IntraSwapFreq	      0.20
+IntraSwapFreq	      1.00
 VolFreq		      0.00
 MultiParticleFreq	0.00
 
@@ -120,12 +120,12 @@ OutputName AR
 #####################################
 # enable, frequency           
 #####################################
-CoordinatesFreq    true   10000000
-RestartFreq  	   true   10
+CoordinatesFreq    true   10000
+RestartFreq  	   true   10000
 ConsoleFreq        true   1
-BlockAverageFreq   true   1000000
+BlockAverageFreq   true   1
 HistogramFreq      false   100000
-CheckpointFreq  false    10
+CheckpointFreq  false    10000000
 ##################################
 # enable: blk avg., fluct.
 ##################################
